<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">


    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:minHeight="48dp" />


    <EditText
        android:id="@+id/edtUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Usuario"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:inputType="numberPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnConectar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conectar"
        android:hint="@string/Conectar" />

    <Button
        android:id="@+id/btnFechar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fechar" />


</LinearLayout>